# python_practice

./: pyproject.toml
leetcode/: collection_recipes.py  data_structures.py  iterables.py
python_practice/: my_builtins.py  numerics.py  strings.py
tests/: helpers.py  test_my_builtins.py
tests/my_functools/: test_builtin.py
